0x07-python-test_driven_development/tests/0-add_integer.txt
Python 3.10.12 (main, Jun 11 2023, 05:26:28) [GCC 11.4.0] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> add_interger = __import__('0-add_integer').add_integer
>>> add_interger(1,2)
3
>>> add_interger(4,4)
8
>>> add_interger(4,-4)
0
>>> add_interger(1,-4)
-3
>>> add_interger(1,4)
5
>>> add_interger(1.01,4.2)
5
>>> add_interger(1.01,)
99
>>> add_interger(1,)
99
>>> add_interger('',)
Traceback (most recent call last):
    raise TypeError("a must be an integer")
TypeError: a must be an integer
>>> add_interger(,)
  File "<stdin>", line 1
    add_interger(,)
                 ^
SyntaxError: invalid syntax
>>> add_interger('3',)
TypeError: a must be an integer
>>> add_interger('3','1')
TypeError: a must be an integer
>>> add_interger('3','str')
TypeError: a must be an integer
>>> add_interger('1','str')
TypeError: a must be an integer
>>> add_interger(1,float('inf'))
OverflowError: cannot convert float infinity to integer

